Enhance LDPlayerGUI: Automatically start and stop PHP server; improve error handling and UI consistency